fix: content-container can change its width on panel collapse

--- a/src/components/MainPanel/MainPanel.scss
+++ b/src/components/MainPanel/MainPanel.scss
@@ -106,6 +106,9 @@
     }
   }
 
+  & + main .content-container {
+    width: 1206px;
+  }
   
   .logo-container {
     width: 40px;
