--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ main {
   box-shadow: 4px 7px 15px rgba(0, 0, 0, 0.08);
   border-radius: 15px;
   padding: 50px 45px;
+  transition: width ease-in-out 0.5s;
 }
 
 .margin-common-content {
